feat: update search bar layout on home page

--- a/themes/hugo-theme-stack-master/i18n/en.yaml
+++ b/themes/hugo-theme-stack-master/i18n/en.yaml
@@ -54,6 +54,9 @@ widget:
     categoriesCloud:
         title:
             other: Categories
+    search:
+        title:
+            other: Search
 
 search:
     title:
